--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-10 offset-md-1">
         <section> 
             <div class="login-form-icon">
-                <i class="fas fa-user-circle fa-9x text-secondary"
+                <i class="fas fa-user-circle fa-9x text-secondary"></i>
             </div>
             <form id="account" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-block btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary btn-block ">Log in</button>
                 </div>
         
             </form>
