--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial.cshtml" />
+
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -27,8 +29,11 @@
                         </li>
                     </ul>
                 </div>
+                <div class="topnav">
+                    <input type="text" placeholder="Search..">
+                </div>
             </div>
-        </nav>
+        </nav>  
     </header>
     <div class="container">
         <main role="main" class="pb-3">
