Successfully added a Department tab but able to make it work

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,7 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>The Information diplayed on the Web-Application is not 100% accurate and could be modified any time.</p>
 
 
-<a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
