--- a/Views/Home/Department.cshtml
+++ b/Views/Home/Department.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Department Page";
+    ViewData["Title"] = "Department";
 }
+<h1>@ViewData["Title"]</h1>
 
-<div class="text-center">
-    <p>Hai</p>
-</div>
+<p>The Information diplayed on the Web-Application is not 100% accurate and could be modified any time.</p>
+
+
