Added more policy privacy information

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,6 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>The Information diplayed on the Web-Application is not 100% accurate and could be modified any time.</p>
-
-
+<p>The Information diplayed on the Web-Application is not 100% accurate and could be modified by the Admins any time.</p>
+<p>The information will be displayed only if you are logged in and if you are a student or a teacher.</p>
+<p>Admins will have the authority to modify the information, as in update and remove the information</p>
+<p>The Student or Teacher will have to sign in first to be able to gain full accessibility of the website.</p>
+<p></p>
