Modified and added a picture to the home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<h1 class="display-4">Welcome to the Avondale College Web-App</h1>
+
+<html>
+<body>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Avondale_College_D_Block.jpg" alt="Trulli" width="1000" height="500">
+
+</body>
+</html>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the Avondale College Web-App</h1>
     <p>This is a Web-Based Applcation that registers the staff that can be accessed by the students and staffs of Avondale College.</p>
+    <p></p>
 </div>
