--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,6 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>The Information diplayed on the Web-Application is not 100% accurate and could be modified any time.</p>
+<p>On this Web Application, The focus is for people to search for teachers in our school in a efficient way. This is why this Web Application was created. So instead of asking the School manually, you'll just need press a couple of buttons and it's there! Information here is from the consent of the teachers. The teachers will be divided into departments according to what subjects the teacher teaches. This will make it more easier to find if you do not want to scroll down a lot of names. </p>
 
 
