--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
 </html>
 
 <div class="text-center">
-    <p>This is a Web-Based Applcation that registers the staff that can be accessed by the students and staffs of Avondale College.</p>
+    <p>This is a Web-Based Applcation that registers the staff information that can be accessed by the students and staffs of Avondale College.</p>
     <p></p>
 </div>
