--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,9 +72,9 @@
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-            <a href="Mathematics">Link 1</a>
-            <a href="English">Link 2</a>
-            <a href="Sciences">Link 3</a>
+            <a href="Maths">Mathematics</a>
+            <a href="English">English</a>
+            <a href="Science">Science</a>
         </div>
     </div>
 
