Added 3 razor pages English Maths Science

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,9 +72,9 @@
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-            <a href="Maths">Mathematics</a>
-            <a href="English">English</a>
-            <a href="Science">Science</a>
+            <a href="Identity/Account/Maths">Mathematics</a>
+            <a href="Identity/Account/English">English</a>
+            <a href="Identity/Account/Science">Science</a>
         </div>
     </div>
 
