Trying to add a image to the maths department page

--- a/Areas/Identity/Pages/Account/Maths.cshtml
+++ b/Areas/Identity/Pages/Account/Maths.cshtml
@@ -4,7 +4,16 @@
     ViewData["Title"] = "Maths";
 }
 
+<html>
+<body>
+
+    <img src="C:\Users\ac98777\OneDrive - Avondale College" alt="Trulli" width="1000" height="500">
+
+</body>
+</html>
+
 <header>
     <h1>@ViewData["Title"]</h1>
     <p>Welcome to the Maths Department.</p>
 </header>
+
