--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -35,6 +35,9 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block ">Log in</button>
                 </div>
+                <div class="form-group">
+
+                </div>
         
             </form>
         </section>
