Added 5 lanes of content to the maths page to make the page look aesthic

--- a/Areas/Identity/Pages/Account/Maths.cshtml
+++ b/Areas/Identity/Pages/Account/Maths.cshtml
@@ -4,16 +4,14 @@
     ViewData["Title"] = "Maths";
 }
 
-<html>
-<body>
-
-    <img src="C:\Users\ac98777\OneDrive - Avondale College" alt="Trulli" width="1000" height="500">
-
-</body>
-</html>
 
 <header>
     <h1>@ViewData["Title"]</h1>
-    <p>Welcome to the Maths Department.</p>
+    <p>Welcome to the Maths Department!</p>
+    <p>Maths is the study of numbers, shapes, and patterns.</p>
+    <p>People also call maths a second language as people refer it to.</p>
+    <p>The Maths Department has prepared a whole lot of events for students to participate in to have fun and learns maths!</p>
+    <p>The Maths Departments here provides you with plenty of competition that will be held.</p>
+    <p>There will also be tutorial for maths if you're struggling with it, to boost your confidence.</p>
 </header>
 
