Add 6 lines of content in the english razor page

--- a/Areas/Identity/Pages/Account/English.cshtml
+++ b/Areas/Identity/Pages/Account/English.cshtml
@@ -7,4 +7,8 @@
 <header>
     <h1>@ViewData["Title"]</h1>
     <p>Welcome to the English Department.</p>
+    <p>English is the comprehensive and study of the english itself.</p>
+    <p>English is a language is the most used language in the world. <a href="https://www.visualcapitalist.com/100-most-spoken-languages/">Source</a><p>
+    <p>So learning English will give you more opprtunities to allow you to commuicate with more people.</p>
+    <p>Events like creative writing will be held to help people with their English and vocabulary</p>
 </header>
