--- a/Areas/Identity/Pages/Account/Maths.cshtml
+++ b/Areas/Identity/Pages/Account/Maths.cshtml
@@ -9,7 +9,7 @@
     <h1>@ViewData["Title"]</h1>
     <p>Welcome to the Maths Department!</p>
     <p>Maths is the study of numbers, shapes, and patterns.</p>
-    <p>People also call maths a second language as people refer it to.</p>
+    <p>People also call maths a second language as people refer it to as it isn't something easy to pick up.</p>
     <p>The Maths Department has prepared a whole lot of events for students to participate in to have fun and learns maths!</p>
     <p>The Maths Departments here provides you with plenty of competition that will be held.</p>
     <p>There will also be tutorial for maths if you're struggling with it, to boost your confidence.</p>
