Added 4 lines of 3 content in the science razor page

--- a/Areas/Identity/Pages/Account/Science.cshtml
+++ b/Areas/Identity/Pages/Account/Science.cshtml
@@ -7,4 +7,7 @@
 <header>
     <h1>@ViewData["Title"]</h1>
     <p>Welcome to the Science Department.</p>
+    <p>Science is the application of knowledge and basic understanding of the natural and the soical world.</p>
+    <p>The sub topics of science is more known as Physics, Chemistry, Biology, and etc</p>
+    <p>The Science department will be hosting events to show how fun science generally is.</p>
 </header>
