--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -68,6 +68,7 @@
     <h2>This Is the Departments dropdown</h2>
     <p>Move the mouse over the button to open the dropdown menu.</p>
     <p>These links will take you to the departments urls.</p>
+    <p>These url links will give you a rough explaination of what the specific department provides</p>
 
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
@@ -77,6 +78,5 @@
             <a href="Identity/Account/Science">Science</a>
         </div>
     </div>
-
-</body>
+    </body>
 </html>
