Added a class role into the models folder and added a admin controller to the controller folder

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         </li>
                     </ul>
                 </div>
+                <!--Search Bar-->
                 <div class="topnav">
                     <input type="text" placeholder="Search..">
                 </div>
