--- a/Views/Administration/CreateRole.cshtml
+++ b/Views/Administration/CreateRole.cshtml
@@ -1,26 +1,27 @@
 ﻿@page
-@model CreateRoleViewModel
+@model _Views_Administration_CreateRole
 @{
-    ViewData["Title"] = "Create New Role";
+    ViewData["Title"] = "Register";
     Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
 
-<div asp-validation-summary="All" class="text-danger"></div>
-<div class="row">
-    <div class="col-md-6">
-        <div class="form-group">
-            <label asp-for="RoleName"></label>
-            <input asp-for="RoleName" class="form-control" />
+<form asp-action="CreateRole" method="post" class="mt-3">
+    <div asp-validation-summary="All" class="text-danger">
+    </div>
+    <div class="form-group row">
+        <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="RoleName" class="form-control" placeholder="Name">
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
-
     </div>
-</div>
-<button type="submit" class="btn btn-primary">Create Role</button>
 
-
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary" style="width:auto">
+                Create Role
+            </button>
+        </div>
+    </div>
+</form>
