attempting to add a query that will update the search bar every second a key is pressed in the science razor page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
     <h2>This Is the Departments dropdown</h2>
     <p>Move the mouse over the button to open the dropdown menu.</p>
     <p>These links will take you to the departments urls.</p>
-    <p>These url links will give you a rough explaination of what the specific department provides</p>
+    <p>These url links will give you a rough explaination of what the specific department provides.</p>
 
     <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
