--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <h1 class="display-4">Welcome to the Avondale College Web-App</h1>
-
+<!--A Photo will be displayed when the user signs in into the website-->
 <html>
 <body>
 
@@ -16,6 +16,7 @@
     <p></p>
 </div>
 
+<!--Search Bar-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -64,7 +65,7 @@
     </style>
 </head>
 <body>
-
+    <!--Text that is displayed at the bottom of the page-->
     <h2>This Is the Departments dropdown</h2>
     <p>Move the mouse over the button to open the dropdown menu.</p>
     <p>These links will take you to the departments urls.</p>
@@ -80,3 +81,5 @@
     </div>
     </body>
 </html>
+
+<!--When the dropdown menu is hovered on by the user, the user will see a dropdown menu that 3 different pages that all leads to a different page-->
