--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,8 +1,4 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
-<p>On this Web Application, The focus is for people to search for teachers in our school in a efficient way. This is why this Web Application was created. So instead of asking the School manually, you'll just need press a couple of buttons and it's there! Information here is from the consent of the teachers. The teachers will be divided into departments according to what subjects the teacher teaches. This will make it more easier to find if you do not want to scroll down a lot of names. </p>
-
-<h2>Information Collection and Use</h2>
-<p>The information that is collected by this website is secured as people won't be able to easily get access to it.</p>
