--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-
+<!--The User will be directly greeted with the sign in page if this is clicked-->
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
