--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+<!--The text displayed below will be displayed if the page is opened by the user-->
 <h1>@ViewData["Title"]</h1>
 <p>On this Web Application, The focus is for people to search for teachers in our school in a efficient way. This is why this Web Application was created. So instead of asking the School manually, you'll just need press a couple of buttons and it's there! Information here is from the consent of the teachers. The teachers will be divided into departments according to what subjects the teacher teaches. This will make it more easier to find if you do not want to scroll down a lot of names. </p>
 
 <h2>Information Collection and Use</h2>
-<p>The information that is collected by this website is secured as people won't be able to easily get access to it.</p>
+<p>The information that is collected by this website is secured as people won't be able to easily get access to it. The only people that will be able to access the information stored is only going to be he admins and the principal. This is so, we can use it in our database and present it on our school website to show to the whole community. </p>
