--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial.cshtml" />
 
-                    
+                    <!--The pages here will be displayed on the home screen when the user signs into the website-->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -32,6 +32,7 @@
                         </li>
                     </ul>
                 </div>
+                <!--There will be a search bar in the top right of the website-->
                 <div class="topnav">
                     <input type="text" placeholder="Search..">
                 </div>
