More Comments in the pages

--- a/Areas/Identity/Pages/Account/English.cshtml
+++ b/Areas/Identity/Pages/Account/English.cshtml
@@ -12,3 +12,4 @@
     <p>So learning English will give you more opprtunities to allow you to commuicate with more people.</p>
     <p>Events like creative writing will be held to help people with their English and vocabulary</p>
 </header>
+<!--When the user clicks on the hyper link, it will take them to the website of the source-->
