--- a/Areas/Identity/Pages/Account/Maths.cshtml
+++ b/Areas/Identity/Pages/Account/Maths.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Maths";
 }
 
-
+<!--The message will be displayed when the user clicks this page-->
 <header>
     <h1>@ViewData["Title"]</h1>
     <p>Welcome to the Maths Department!</p>
