--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,8 @@
     Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
-
+<!--The Register Page-->
+<!--There will be columns that you can enter your information in-->
 <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="row">
