--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
     ViewData["Title"] = "About Us";
 }
+<!--The Message here will be displayed when the page is opened up by the user-->
 <h1>@ViewData["Title"]</h1>
