--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <p></p>
 </div>
 
-<!--Search Bar-->
+<!--Search Bar that will be place on the top right of the website-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -81,5 +81,4 @@
     </div>
     </body>
 </html>
-
 <!--When the dropdown menu is hovered on by the user, the user will see a dropdown menu that 3 different pages that all leads to a different page-->
