More content in the about us page

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -3,3 +3,6 @@
 }
 <!--The Message here will be displayed when the page is opened up by the user-->
 <h1>@ViewData["Title"]</h1>
+<p>We are here to here to help people to provide the community information that they might need help for.<p>
+<p>We want this website to encourage families and other people to come to our school.<p>
+<p>This is so we can provide a good environment for the new comers<p>
