--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<h1 class="display-4">Welcome to the Avondale College Web-App</h1>
+<h1 class="display-4">Welcome to Avondale College Web-App</h1>
 <!--A Photo will be displayed when the user signs in into the website-->
 <html>
 <body>
@@ -16,7 +16,7 @@
     <p></p>
 </div>
 
-<!--Search Bar that will be place on the top right of the website-->
+<!--Search Bar that will be place on the top right of the website--> 
 <!DOCTYPE html>
 <html>
 <head>
@@ -81,4 +81,4 @@
     </div>
     </body>
 </html>
-<!--When the dropdown menu is hovered on by the user, the user will see a dropdown menu that 3 different pages that all leads to a different page-->
+<!--When the dropdown menu is hovered on by the user, the user will see a dropdown menu that 3 different pages that all leads to a different page--> 
